gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/no_Throwable.d
version https://git-lfs.github.com/spec/v1
oid sha256:f96d1c5e8170540517485775ed99942ec6133f61be66e3d224be9812677f4f28
size 474
